--- a/Apq/Apq.DB/App.config
+++ b/Apq/Apq.DB/App.config
@@ -1,5 +1,11 @@
 <?xml version="1.0"?>
 <configuration>
+	<configSections>
+	</configSections>
+	<connectionStrings>
+		<add name="Apq.Properties.Settings.pdbpConnectionString" connectionString="Data Source=(local);Initial Catalog=pdbp;Persist Security Info=True;User ID=apq;Password=f"
+		 providerName="System.Data.SqlClient" />
+	</connectionStrings>
 	<appSettings>
 		<!-- 配置文件默认后缀 -->
 		<!--<add key="Apq.Config.ApqConfigs.XmlConfigExt" value="apq"/>-->
