--- a/Apq/Apq.DB/Apq.DB.csproj
+++ b/Apq/Apq.DB/Apq.DB.csproj
@@ -144,6 +144,9 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -152,7 +155,18 @@
     <Compile Include="Apq.DB\FileTrans.cs" />
     <Compile Include="Privilege\Privilege.cs" />
     <Compile Include="Privilege\User.cs" />
+    <Compile Include="Privilege\UserP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="XSD\Privilege.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Privilege.xsd</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Apq.DB.dll.apq">
@@ -164,6 +178,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="XSD\Privilege.xsc">
+      <DependentUpon>Privilege.xsd</DependentUpon>
+    </None>
+    <None Include="XSD\Privilege.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Privilege.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="XSD\Privilege.xss">
+      <DependentUpon>Privilege.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
