--- a/Apq/Apq.DB/App.config
+++ b/Apq/Apq.DB/App.config
@@ -2,10 +2,7 @@
 <configuration>
 	<configSections>
 	</configSections>
-	<connectionStrings>
-		<add name="Apq.Properties.Settings.pdbpConnectionString" connectionString="Data Source=(local);Initial Catalog=pdbp;Persist Security Info=True;User ID=apq;Password=f"
-		 providerName="System.Data.SqlClient" />
-	</connectionStrings>
+	<connectionStrings />
 	<appSettings>
 		<!-- 配置文件默认后缀 -->
 		<!--<add key="Apq.Config.ApqConfigs.XmlConfigExt" value="apq"/>-->
