--- a/Apq/Apq.Com/App.config
+++ b/Apq/Apq.Com/App.config
@@ -1,7 +1,20 @@
 <?xml version="1.0"?>
 <configuration>
+	<configSections>
+		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+			<section name="Apq.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+			<section name="Apq.Com.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+		</sectionGroup>
+	</configSections>
 	<appSettings>
 		<!-- 配置文件默认后缀 -->
 		<!--<add key="Apq.Config.ApqConfigs.XmlConfigExt" value="apq"/>-->
 	</appSettings>
+	<applicationSettings>
+		<Apq.Com.Properties.Settings>
+			<setting name="XmlAsmConfigFolder" serializeAs="String">
+				<value></value>
+			</setting>
+		</Apq.Com.Properties.Settings>
+	</applicationSettings>
 </configuration>
