--- a/Apq/Apq.Web/App.config
+++ b/Apq/Apq.Web/App.config
@@ -1,6 +1,11 @@
 <?xml version="1.0"?>
 <configuration>
-	<connectionStrings>
+	<configSections>
+  <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+   <section name="Apq.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </sectionGroup>
+ </configSections>
+ <connectionStrings>
 		<add name="AgiltronConnectionString" connectionString="Data Source=V-APQ-DEV;Initial Catalog=Agiltron;Persist Security Info=True;User ID=sa;Password=f" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<appSettings>
@@ -9,4 +14,11 @@
 		<!-- 配置文件默认后缀 -->
 		<!--<add key="Apq.Config.ApqConfigs.XmlConfigExt" value="apq"/>-->
 	</appSettings>
+ <applicationSettings>
+  <Apq.Properties.Settings>
+   <setting name="XmlAsmConfigFolder" serializeAs="String">
+    <value />
+   </setting>
+  </Apq.Properties.Settings>
+ </applicationSettings>
 </configuration>
