--- a/Apq/Apq.Win/App.config
+++ b/Apq/Apq.Win/App.config
@@ -1,9 +1,21 @@
 <?xml version="1.0"?>
 <configuration>
-	<appSettings>
+	<configSections>
+  <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+   <section name="Apq.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </sectionGroup>
+ </configSections>
+ <appSettings>
 		<add key="Str1" value="Str1"/>
 
 		<!-- 配置文件默认后缀 -->
 		<!--<add key="Apq.Config.ApqConfigs.XmlConfigExt" value="apq"/>-->
 	</appSettings>
+ <applicationSettings>
+  <Apq.Properties.Settings>
+   <setting name="XmlAsmConfigFolder" serializeAs="String">
+    <value />
+   </setting>
+  </Apq.Properties.Settings>
+ </applicationSettings>
 </configuration>
