--- a/Apq/Apq.Win/Apq.Win.csproj
+++ b/Apq/Apq.Win/Apq.Win.csproj
@@ -202,6 +202,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Windows\Controls\DataSetDTS\DTSColumnMappings.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -394,6 +399,10 @@
   <ItemGroup>
     <None Include="Apq.Win.dll.apq">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <Content Include="_Doc\Apq.Win.dll.apq.txt" />
     <Content Include="_Doc\Apq.Win.dll.config.txt" />
