--- a/Apq/Apq/App.config
+++ b/Apq/Apq/App.config
@@ -2,10 +2,14 @@
 <configuration>
 	<configSections>
 		<section name="log4net" type="System.Configuration.IgnoreSectionHandler" />
+		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+			<section name="Apq.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+		</sectionGroup>
 	</configSections>
 	<connectionStrings>
-		<add name="Apq.Properties.Settings.ApqConnectionString" connectionString="Data Source=.;Initial Catalog=Apq;Persist Security Info=True;User ID=sa;Password=f" providerName="System.Data.SqlClient" />
-	</connectionStrings>
+  <add name="Apq.Properties.Settings.ApqConnectionString" connectionString="Data Source=.;Initial Catalog=Apq;Persist Security Info=True;User ID=sa;Password=f"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 	<appSettings>
 		<!-- 配置文件默认后缀 -->
 		<!--<add key="Apq.Config.ApqConfigs.XmlConfigExt" value="apq"/>-->
@@ -28,4 +32,11 @@
 			</providers>
 		</roleManager>
 	</system.web>
+	<applicationSettings>
+		<Apq.Properties.Settings>
+   <setting name="XmlAsmConfigFolder" serializeAs="String">
+    <value />
+   </setting>
+  </Apq.Properties.Settings>
+	</applicationSettings>
 </configuration>
