--- a/ApqDBManager/ApqDBManager/ApqDBManager.csproj
+++ b/ApqDBManager/ApqDBManager/ApqDBManager.csproj
@@ -256,6 +256,12 @@
     <Compile Include="Forms\FTPFileUp.Designer.cs">
       <DependentUpon>FTPFileUp.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\CryptCS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\CryptCS.Designer.cs">
+      <DependentUpon>CryptCS.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controls\ResultTable.cs">
       <SubType>UserControl</SubType>
@@ -398,6 +404,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FTPFileUp.resx">
       <DependentUpon>FTPFileUp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\CryptCS.resx">
+      <DependentUpon>CryptCS.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <SubType>Designer</SubType>
