--- a/ApqFTPWS/Web.config
+++ b/ApqFTPWS/Web.config
@@ -14,7 +14,7 @@
 		</sectionGroup>
 	</configSections>
 	<appSettings>
-		<add key="Apq.Config.ApqConfigs.XmlConfigFolder" value="P:\VS2008\SVNProjects\ApqDBManager\ApqFTPWS\bin\"/>
+		<add key="Apq.Config.ApqConfigs.XmlConfigFolder" value="D:\DBA\ApqFTPWS\bin\"/>
 	</appSettings>
 	<connectionStrings/>
 	<system.web>
