--- a/ApqDBManager/Apq.DBC/Apq.DBC.csproj
+++ b/ApqDBManager/Apq.DBC/Apq.DBC.csproj
@@ -69,7 +69,11 @@
     <None Include="Apq.DBC.dll.apq">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Content Include="cs.xml" />
     <Content Include="Web.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="_DOC\_使用说明.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
