--- a/ApqDBManager/Apq.DBC/Web.config
+++ b/ApqDBManager/Apq.DBC/Web.config
@@ -2,7 +2,8 @@
 <configuration>
 
 	<appSettings>
-		<add key="Apq.Config.ApqConfigs.XmlConfigFolder" value="apq配置文件目录,可以每个程序一个目录,也可共享"/>
+		<!-- 注意:将该目录的读写权限赋予NETWORK SERVICE -->
+		<add key="Apq.DBC.csFile" value="D:\DBA\cs\cs.res"/>
 	</appSettings>
 
 </configuration>
