--- a/ApqDBManager/Apq.DBC/Apq.DBC.csproj
+++ b/ApqDBManager/Apq.DBC/Apq.DBC.csproj
@@ -34,11 +34,12 @@
     <DocumentationFile>bin\Release\Apq.DBC.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Apq, Version=0.3.3979.25806, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Apq, Version=0.3.3989.36462, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Dlls\Apq.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -52,22 +53,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Apq.DBC\GlobalObject.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Apq.DBC.dll.apq">
+    </None>
     <None Include="Apq.dll.apq">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Apq.dll.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Apq.dll.log4net">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Apq.DBC.dll.apq">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Content Include="cs.xml" />
     <Content Include="Web.config">
