--- a/ApqDBManager/Apq.DBC/Web.config
+++ b/ApqDBManager/Apq.DBC/Web.config
@@ -2,8 +2,8 @@
 <configuration>
 
 	<appSettings>
-		<!-- 注意:将该目录的读写权限赋予NETWORK SERVICE -->
-		<add key="Apq.DBC.csFile" value="D:\DBA\cs\cs.res"/>
+		<!-- 注意:请使用绝对路径,并为Network Service帐号分配将该目录的读取权限 -->
+		<add key="Apq.DBC.csFile" value="D:\DBC\cs.res"/>
 	</appSettings>
 
 </configuration>
