--- a/ApqDBManager/ApqDBManager/ApqDBManager.csproj
+++ b/ApqDBManager/ApqDBManager/ApqDBManager.csproj
@@ -196,6 +196,12 @@
     <Compile Include="Controls\MainOption\XmlServers.Designer.cs">
       <DependentUpon>XmlServers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\DBCEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DBCEdit.Designer.cs">
+      <DependentUpon>DBCEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ErrList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -262,6 +268,12 @@
     <Compile Include="Forms\CryptCS.Designer.cs">
       <DependentUpon>CryptCS.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\DBCList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DBCList.Designer.cs">
+      <DependentUpon>DBCList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controls\ResultTable.cs">
       <SubType>UserControl</SubType>
@@ -325,6 +337,11 @@
     <Compile Include="Forms\SqlEdit.Designer.cs">
       <DependentUpon>SqlEdit.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="xsd\Random.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -371,6 +388,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\DBCEdit.resx">
+      <DependentUpon>DBCEdit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\DES.resx">
       <SubType>Designer</SubType>
       <DependentUpon>DES.cs</DependentUpon>
@@ -409,6 +429,10 @@
       <DependentUpon>CryptCS.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\DBCList.resx">
+      <DependentUpon>DBCList.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <SubType>Designer</SubType>
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -430,6 +454,10 @@
     <EmbeddedResource Include="Forms\SqlEdit.resx">
       <DependentUpon>SqlEdit.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
