--- a/PV_Imei/PV_Imei/Web.config
+++ b/PV_Imei/PV_Imei/Web.config
@@ -19,9 +19,9 @@
 
 
 	<appSettings>
+		<add key="Apq.DBC.csFile" value="D:\DBA\cs\cs.res"/>
 	</appSettings>
 	<connectionStrings>
-		<add name="znlyDW" connectionString="Data Source=znlyDW;Initial Catalog=znlyDW;Persist Security Info=True;User ID=sx;Password=9G2R3vef7LawxNCd"/>
 	</connectionStrings>
 
 	<system.web>
