--- a/ApqDBManager/Apq.DBC/Apq.DBC.csproj
+++ b/ApqDBManager/Apq.DBC/Apq.DBC.csproj
@@ -96,5 +96,16 @@ xcopy "%25Reference%25\$(ConfigurationName)\Apq.pdb" "$(ProjectDir)Dlls\" /c /q 
 
 :End
 </PreBuildEvent>
+    <PostBuildEvent>if "%25Reference%25" == "" goto End
+xcopy "%25Reference%25\Res\$(ProjectName)" "$(TargetDir)Res\" /c /q /g /h /r /k /y /e
+
+xcopy "$(TargetPath)" "%25Reference%25\$(ConfigurationName)\" /c /q /g /h /r /k /y
+xcopy "$(TargetDir)$(TargetName).xml" "%25Reference%25\$(ConfigurationName)\" /c /q /g /h /r /k /y
+xcopy "$(TargetDir)$(TargetName).pdb" "%25Reference%25\$(ConfigurationName)\" /c /q /g /h /r /k /y
+:xcopy "$(TargetDir)web.config" "%25Reference%25\$(ConfigurationName)\" /c /q /g /h /r /k /y
+:xcopy "$(TargetDir)_Doc\_使用说明.txt" "%25Reference%25\$(ConfigurationName)\" /c /q /g /h /r /k /y
+:xcopy "$(TargetPath).config" "%25Reference%25\$(ConfigurationName)\Config\" /c /q /g /h /r /k /y
+:xcopy "$(ProjectDir)$(TargetFileName).apq" "%25Reference%25\$(ConfigurationName)\Config\" /c /q /g /h /r /k /y
+:End</PostBuildEvent>
   </PropertyGroup>
 </Project>
