--- a/Apq/Apq.Reg.Client/Apq.Reg.Client.csproj
+++ b/Apq/Apq.Reg.Client/Apq.Reg.Client.csproj
@@ -151,9 +151,17 @@
     <Reference Include="System.Data.DataSetExtensions">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Apq.Reg.Client.Win\RegForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Apq.Reg.Client.Win\RegForm.Designer.cs">
+      <DependentUpon>RegForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Apq.Reg.Client\Common.cs" />
     <Compile Include="Apq.Reg.Client\GlobalObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -204,8 +212,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Apq.Reg.Client.Win\RegForm.resx">
+      <DependentUpon>RegForm.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
     <Folder Include="Apq.Reg.Client.Web\" />
-    <Folder Include="Apq.Reg.Client.Win\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
