--- a/ApqDBManager/ApqDBManager/ApqDBManager.csproj
+++ b/ApqDBManager/ApqDBManager/ApqDBManager.csproj
@@ -657,6 +657,9 @@
     <None Include="ApqDBManager[冰川].reg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="ApqDBManager[雪羽].reg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
