--- a/ApqDBManager/ApqDBManager/ApqDBManager.csproj
+++ b/ApqDBManager/ApqDBManager/ApqDBManager.csproj
@@ -96,6 +96,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Dlls\Apq.DB.dll</HintPath>
     </Reference>
+    <Reference Include="Apq.DBC, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Dlls\Apq.DBC.dll</HintPath>
+    </Reference>
     <Reference Include="Apq.Reg.Client, Version=0.3.4018.43148, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Dlls\Apq.Reg.Client.dll</HintPath>
@@ -200,6 +204,12 @@
     <Compile Include="Controls\MainOption\XmlServers.Designer.cs">
       <DependentUpon>XmlServers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\MainOption\DBC.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\MainOption\DBC.Designer.cs">
+      <DependentUpon>DBC.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\DBCEdit.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -248,12 +258,6 @@
     <Compile Include="Forms\RSAKey.Designer.cs">
       <DependentUpon>RSAKey.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\SrvsMgr.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\SrvsMgr.Designer.cs">
-      <DependentUpon>SrvsMgr.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\FTPFileTrans.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -277,6 +281,24 @@
     </Compile>
     <Compile Include="Forms\DBCList.Designer.cs">
       <DependentUpon>DBCList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\SrvsMgr\DBServer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SrvsMgr\DBServer.Designer.cs">
+      <DependentUpon>DBServer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\SrvsMgr\SqlInstance.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SrvsMgr\SqlInstance.Designer.cs">
+      <DependentUpon>SqlInstance.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\SrvsMgr\DB.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SrvsMgr\DB.Designer.cs">
+      <DependentUpon>DB.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controls\ResultTable.cs">
@@ -329,11 +351,11 @@
     <Compile Include="Forms\Random.Designer.cs">
       <DependentUpon>Random.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\SolutionExplorer.cs">
+    <Compile Include="Forms\SqlIns.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\SolutionExplorer.Designer.cs">
-      <DependentUpon>SolutionExplorer.cs</DependentUpon>
+    <Compile Include="Forms\SqlIns.Designer.cs">
+      <DependentUpon>SqlIns.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\SqlEdit.cs">
       <SubType>Form</SubType>
@@ -345,6 +367,10 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="xsd\Random.cs">
+      <DependentUpon>Random.xsd</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="xsd\Random.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -383,6 +409,9 @@
     <EmbeddedResource Include="Controls\MainOption\XmlServers.resx">
       <DependentUpon>XmlServers.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Controls\MainOption\DBC.resx">
+      <DependentUpon>DBC.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\ResultTable.resx">
       <SubType>Designer</SubType>
       <DependentUpon>ResultTable.cs</DependentUpon>
@@ -420,9 +449,6 @@
     <EmbeddedResource Include="Forms\RSAKey.resx">
       <DependentUpon>RSAKey.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\SrvsMgr.resx">
-      <DependentUpon>SrvsMgr.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FTPFileTrans.resx">
       <DependentUpon>FTPFileTrans.cs</DependentUpon>
     </EmbeddedResource>
@@ -436,6 +462,15 @@
     <EmbeddedResource Include="Forms\DBCList.resx">
       <DependentUpon>DBCList.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SrvsMgr\DBServer.resx">
+      <DependentUpon>DBServer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SrvsMgr\SqlInstance.resx">
+      <DependentUpon>SqlInstance.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SrvsMgr\DB.resx">
+      <DependentUpon>DB.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <SubType>Designer</SubType>
@@ -451,8 +486,8 @@
       <DependentUpon>Random.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\SolutionExplorer.resx">
-      <DependentUpon>SolutionExplorer.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\SqlIns.resx">
+      <DependentUpon>SqlIns.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SqlEdit.resx">
@@ -685,6 +720,9 @@ xcopy "%25Reference%25\Res\$(ProjectName)" "$(ProjectDir)Res\" /c /q /g /h /r /k
 xcopy "%25Reference%25\$(ConfigurationName)\Config\Apq.Com.dll.config" "$(ProjectDir)" /c /q /g /h /r /k /y
 xcopy "%25Reference%25\$(ConfigurationName)\Config\Apq.Com.dll.apq" "$(ProjectDir)" /c /q /g /h /r /k /y
 
+xcopy "%25Reference%25\$(ConfigurationName)\Config\Apq.DBC.dll.config" "$(ProjectDir)" /c /q /g /h /r /k /y
+xcopy "%25Reference%25\$(ConfigurationName)\Config\Apq.DBC.dll.apq" "$(ProjectDir)" /c /q /g /h /r /k /y
+
 xcopy "%25Reference%25\$(ConfigurationName)\Config\Apq.Win.dll.config" "$(ProjectDir)" /c /q /g /h /r /k /y
 xcopy "%25Reference%25\$(ConfigurationName)\Config\Apq.Win.dll.apq" "$(ProjectDir)" /c /q /g /h /r /k /y
 
@@ -710,6 +748,10 @@ xcopy "%25Reference%25\$(ConfigurationName)\Apq.Com.pdb" "$(ProjectDir)Dlls\" /c
 xcopy "%25Reference%25\$(ConfigurationName)\Apq.DB.dll" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
 xcopy "%25Reference%25\$(ConfigurationName)\Apq.DB.xml" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
 xcopy "%25Reference%25\$(ConfigurationName)\Apq.DB.pdb" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
+
+xcopy "%25Reference%25\$(ConfigurationName)\Apq.DBC.dll" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
+xcopy "%25Reference%25\$(ConfigurationName)\Apq.DBC.xml" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
+xcopy "%25Reference%25\$(ConfigurationName)\Apq.DBC.pdb" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
 
 :xcopy "%25Reference%25\$(ConfigurationName)\Apq.CryptKey.dll" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
 :xcopy "%25Reference%25\$(ConfigurationName)\Apq.CryptKey.xml" "$(ProjectDir)Dlls\" /c /q /g /h /r /k /y
