--- a/ApqDBManager/ApqDBManager/ApqDBManager.csproj
+++ b/ApqDBManager/ApqDBManager/ApqDBManager.csproj
@@ -294,11 +294,11 @@
     <Compile Include="Forms\SrvsMgr\SqlInstance.Designer.cs">
       <DependentUpon>SqlInstance.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\SrvsMgr\DB.cs">
+    <Compile Include="Forms\SrvsMgr\DBC.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\SrvsMgr\DB.Designer.cs">
-      <DependentUpon>DB.cs</DependentUpon>
+    <Compile Include="Forms\SrvsMgr\DBC.Designer.cs">
+      <DependentUpon>DBC.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controls\ResultTable.cs">
@@ -469,8 +469,8 @@
     <EmbeddedResource Include="Forms\SrvsMgr\SqlInstance.resx">
       <DependentUpon>SqlInstance.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\SrvsMgr\DB.resx">
-      <DependentUpon>DB.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\SrvsMgr\DBC.resx">
+      <DependentUpon>DBC.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <SubType>Designer</SubType>
@@ -683,10 +683,7 @@
     <Content Include="_Doc\说明.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="ApqDBManager.dll.apq">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="ApqDBManager.dll.config">
+    <None Include="Apq.DBC.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="ApqDBManager[冰川].reg">
