--- a/Apq/Apq.DBC/Apq.DBC.csproj
+++ b/Apq/Apq.DBC/Apq.DBC.csproj
@@ -60,6 +60,10 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="XSD.cs">
+      <DependentUpon>XSD.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="XSD.Designer.cs">
       <DependentUpon>XSD.xsd</DependentUpon>
       <DesignTime>True</DesignTime>
@@ -130,9 +134,9 @@ xcopy "%25Reference%25\Res\$(ProjectName)" "$(TargetDir)Res\" /c /q /g /h /r /k 
 xcopy "$(TargetPath)" "%25Reference%25\$(ConfigurationName)\" /c /q /g /h /r /k /y
 xcopy "$(TargetDir)$(TargetName).xml" "%25Reference%25\$(ConfigurationName)\" /c /q /g /h /r /k /y
 xcopy "$(TargetDir)$(TargetName).pdb" "%25Reference%25\$(ConfigurationName)\" /c /q /g /h /r /k /y
+xcopy "$(TargetPath).config" "%25Reference%25\$(ConfigurationName)\Config\" /c /q /g /h /r /k /y
 :xcopy "$(TargetDir)web.config" "%25Reference%25\$(ConfigurationName)\" /c /q /g /h /r /k /y
 :xcopy "$(TargetDir)_Doc\_使用说明.txt" "%25Reference%25\$(ConfigurationName)\" /c /q /g /h /r /k /y
-:xcopy "$(TargetPath).config" "%25Reference%25\$(ConfigurationName)\Config\" /c /q /g /h /r /k /y
 :xcopy "$(ProjectDir)$(TargetFileName).apq" "%25Reference%25\$(ConfigurationName)\Config\" /c /q /g /h /r /k /y
 :End</PostBuildEvent>
   </PropertyGroup>
